// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BidCountComponent matches snapshot 1`] = `
<div
  className="usa-grid-full bid-count-container "
>
  <div
    className="bid-count-label"
    id="bid-counts"
  >
    Bid Count:
  </div>
  <ul
    aria-labelledby="bid-counts"
    className="bid-count-list"
  >
    <BidCountNumber
      number={5}
      type="totalBids"
    />
    <BidCountNumber
      number={5}
      type="inGradeBids"
    />
    <BidCountNumber
      number={5}
      type="atSkillBids"
    />
    <BidCountNumber
      number={5}
      type="inGradeAtSkillBids"
    />
  </ul>
</div>
`;

exports[`BidCountComponent matches snapshot when hideLabel is true 1`] = `
<div
  className="usa-grid-full bid-count-container "
>
  <div
    className="bid-count-label usa-sr-only"
    id="bid-counts"
  >
    Bid Count:
  </div>
  <ul
    aria-labelledby="bid-counts"
    className="bid-count-list"
  >
    <BidCountNumber
      number={5}
      type="totalBids"
    />
    <BidCountNumber
      number={5}
      type="inGradeBids"
    />
    <BidCountNumber
      number={5}
      type="atSkillBids"
    />
    <BidCountNumber
      number={5}
      type="inGradeAtSkillBids"
    />
  </ul>
</div>
`;
